# dd-trace-php

./: CMakeLists.txt  composer.json  config.m4  dd-library-php-setup.php  docker-compose.yml  package.xml
.circleci/: config.yml
bridge/: _files.php  functions.php
cmake/: FindPHP.cmake
dockerfiles/compile_extension/: install-php
dockerfiles/php-8.0/: Dockerfile
ext/php8/: ddtrace.c  dispatch.c  runtime.c  runtime.h  serializer.c
ext/php8/integrations/: integrations.c
profiling/: datadog-profiling.h
profiling/plugins/recorder_plugin/: recorder_plugin.c  recorder_plugin.h
profiling/plugins/stack_collector_plugin/: stack_collector_plugin.c
profiling/stack-collector/: stack-collector.c  stack-collector.h
src/DDTrace/Integrations/: IntegrationsLoader.php
src/DDTrace/Integrations/Yii/: YiiIntegration.php
src/Integrations/Integrations/FS/: FSIntegration.php
src/ddtrace8/: .clang-format  CMakeLists.txt  clocks.cc  composer.json  config.h.in  config.m4  ddtrace8.c  ddtrace8.stub.php  ddtrace8_arginfo.h  integration.cc  integrations.cc  observers.cc  php_ddtrace8.h
src/ddtrace8/ddtrace8/: clocks.h  integration.hh  integrations.h  integrations.hh  observers.h
src/ddtrace8/phpt_tests/: 001.phpt  002.phpt
src/ext/: CMakeLists.txt  configuration.h  ddtrace.c  ddtrace.h  dispatch.c  dispatch.h  dispatch_setup.c  engine_hooks.c  engine_hooks.h  span.c  span.h
src/ext/integrations/: integrations.c
src/ext/php5/: dispatch.c  engine_hooks.c
src/ext/php5_4/: engine_hooks.c  serializer.c
src/ext/php7/: dispatch.c  engine_hooks.c
tests/AutoInstrumentation/: AutoInstrumentationTest.php
tests/Common/: IntegrationTestCase.php
tests/Frameworks/: README.md
tests/Integration/: BootstrapTest.php  ResponseStatusCodeTest.php  TracerTest.php
tests/Integrations/WordPress/V4_8/: CommonScenariosTest.php
tests/Unit/: TracerTest.php
tests/Unit/Integrations/: IntegrationsLoaderTest.php
tests/ext/sandbox/: auto_flush.phpt  auto_flush_attach_exception.phpt  auto_flush_disables_tracing.phpt  auto_flush_sandbox_exception.phpt  auto_flush_userland_root_span.phpt  dd_trace_api_error.phpt  dd_trace_closed_spans_count.phpt  dd_trace_function_internal.phpt
tests/ext/sandbox-regression/: cake_02.phpt  case_insensitive_method_hook.phpt  enable_throw_exception_if_overridable_doesnt_exist.phpt  private_self_access.phpt  trace_method_or_function_that_will_exist_later.phpt  very_nested_functions.phpt
tests/ext/sandbox/hook_function/: 01.phpt  02.phpt  03.phpt  posthook_01.phpt  posthook_02.phpt  posthook_exit_01.phpt  posthook_exit_02.phpt  prehook_01.phpt  prehook_02.phpt  prehook_03.phpt
tests/ext/sandbox/hook_method/: 01.phpt  02.phpt  03.phpt  posthook_01.phpt  posthook_02.phpt  posthook_03.phpt  posthook_05.phpt  posthook_exceptions_01.phpt  posthook_exit_01.phpt  posthook_exit_02.phpt  prehook_01.phpt  prehook_02.phpt  prehook_03.phpt  prehook_04.phpt  prehook_05.phpt
